--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=project
 spring.datasource.url = jdbc:mysql://localhost:3306/project_tracker
 spring.datasource.username=root
-spring.datasource.password=rhea1402
+spring.datasource.password=your_password
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
